# todo-full-app

./: .env.testing  .env_template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.testing.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 526cafc83681_initial_migration.py  9b69918ac430_initial_migration.py  (+1 more)
backend/: .env.testing  .env_template  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 232251ba7db9_initial_migration.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_auth_api.py  test_todos_api.py  test_users_api.py
backend/tests/unit/domain/: test_user.py
backend/todoapp/adapters/app/: app.py  dependencies.py
backend/todoapp/adapters/app/controllers/auth/: auth_controller.py
backend/todoapp/adapters/app/controllers/common/: base_controller.py
backend/todoapp/adapters/app/controllers/todos/: dependencies.py  todo_controller.py  todos_controller.py
backend/todoapp/adapters/app/controllers/users/: user_controller.py  user_result_api.py
backend/todoapp/adapters/app/middlewares/: exceptions_middleware.py
backend/todoapp/adapters/database/: database.py  seed.py
backend/todoapp/adapters/database/extensions/: __init__.py  orm_cls.py
backend/todoapp/adapters/database/extensions/filters/: __init__.py  get_users_query_filters.py
backend/todoapp/adapters/database/repositories/: repository_base.py  todos_repository.py  users_repository.py
backend/todoapp/domain/: exceptions.py
backend/todoapp/domain/commons/: date_utils.py
backend/todoapp/domain/models/: base_model.py  todo.py  user.py
backend/todoapp/domain/repositories/: users_repository.py
backend/todoapp/domain/services/auth/: auth.py  token.py
backend/todoapp/domain/services/common/: pagination_dto.py
backend/todoapp/domain/services/todos/: todos_dtos.py  todos_service.py
backend/todoapp/domain/services/todos/commands/: add_todo.py  delete_todo.py
backend/todoapp/domain/services/todos/queries/: get_todo.py  get_todos.py
backend/todoapp/domain/services/users/: users_dtos.py
backend/todoapp/domain/services/users/commands/: add_user.py  delete_user.py  edit_user.py
tests/: conftest.py
todoapp/: config.py  main.py  regex.py
web/: .env.development  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
(+93 files in other folders)
